--- a/iframe/pubspec.yaml
+++ b/iframe/pubspec.yaml
@@ -29,6 +29,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
+  # cached network image
+  cached_network_image: ^2.0.0
+
+  # page view indicator
+  smooth_page_indicator: ^0.1.4
+
+  # url launcher
+  url_launcher: ^5.5.0
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -49,8 +59,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/coin.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
