--- a/iframe/pubspec.yaml
+++ b/iframe/pubspec.yaml
@@ -62,6 +62,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/coin.png
+    - assets/app_store.png
+    - assets/play_store.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
